# py-trav-harv

./: .buildinfo  .gitignore  Makefile  README.md  api_test.py  conf.py  debug-logconf.yml  examples.html  genindex.html  index.html  install.html  introduction.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pytravharv.html  search.html  searchindex.js  travharv.html  try_graph_insert_via_triples.py
.doctrees/: environment.pickle  examples.doctree  index.doctree  install.doctree  introduction.doctree  modules.doctree  pytravharv.doctree  travharv.doctree
.github/workflows/: documentation.yml  pr_validation.yml
_modules/: index.html
_modules/pytravharv/: SubjPropPathAssertion.html  TargetStore.html  TravHarvConfigBuilder.html  TravHarvExecuter.html  WebAccess.html  __main__.html
_modules/travharv/: config_build.html  execution_report.html  executor.html  helper.html  path_assertion.html  service.html  store.html  web_discovery.html
_sources/: examples.rst.txt  index.rst.txt  pytravharv.rst.txt  travharv.rst.txt
_static/: custom.css
docs/: conf.py  examples.rst  index.rst  install.md  introduction.md  modules.rst
docs/source/: conf.py  index.rst  modules.rst  pyTravHarv.rst
pre_docs/: conf.py  examples.rst  index.rst  install.md  introduction.md
pyTravHarv/: SubjPropPathAssetion.py  TargetStore.py  TravHarvConfigBuilder.py  TravHarvExecuter.py  WebAccess.py  __init__.py  __main__.py  debug-logconf.yml  logger.py
pytravharv/: SubjPropPathAssertion.py  TargetStore.py  TravHarvConfigBuilder.py  TravHarvExecuter.py  WebAccess.py  __init__.py  __main__.py  common.py  debug-logconf.yml  pytravharv.py  rdfstoreaccess.py  store.py  subj_prop_path_assertion.py  trav_harv_config_builder.py  trav_harv_executer.py  web_access.py
pytravharv/pysubyt_templates/: trajectory.sparql
pytravharv/templates/: delete_graph.sparql  insert_graph.sparql  (+3 more)
tests/: api_test.py  conftest.py  test_TargetStore.py  test_TravHarvConfigBuilder.py  test_WebAccess.py  test_common.py  test_config_build.py  test_executor.py  test_load.py  test_main.py  test_output.ttl  test_output_config_folder.ttl  test_path_assertion.py  test_prop_path_assertion.py  test_pytravharv.py  test_scenarios.py  test_service.py  test_store.py  test_trav_harv_executer.py  test_travharv_config_builder.py  test_web_discovery.py
travharv/: __init__.py  __main__.py  common.py  config_build.py  debug-logconf.yml  execution_report.py  executor.py  helper.py  path_assertion.py  service.py  store.py  subj_prop_path_assertion.py  trav_harv_config_builder.py  trav_harv_executer.py  web_discovery.py
(+39 files in other folders)
